Sort event list if any event time was clamped

Per spec, if an AudioParam event is scheduled in the past, the event
time is clamped to the current time.  However, this clamping can
change to time order of the event list so that it is no longer in
sorted order.

Thus, if any event has it's time clamped, the event list needs to be
sorted in time order again.  The sort must be stable to preserve the
behavior of events that were scheduled at the same time.

Some additional DCHECKs added to verify sorted order.

Unable to come up with a test for this using an offline context.

BUG=678802
TEST=Run test from bug report.

Review-Url: https://codereview.chromium.org/2623563002
Cr-Commit-Position: refs/heads/master@{#442382}

Former-commit-id: 2d2dfb10fa78a88b6ac615b8041948b13df181bb